# devlog

./: .gitignore  LICENSE  README.md  pyproject.toml
devlog/: __init__.py  __main__.py  cli.py  store.py
tests/: test_cli.py  test_store.py
